--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = "^3.10"
 mysql-connector-python = "^8.0.27"
+pymongo = "^4.0.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
